--- a/src/pages/tourdates.astro
+++ b/src/pages/tourdates.astro
@@ -2,7 +2,6 @@
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="Pipas">
-	<main>
-	</main>
+<Layout title="Toudates | Pipas">
+  <h2>tourdates</h2>
 </Layout>
