tourdates db added

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,13 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Pipas">
-	<main>
-	</main>
+  <main>
+    <div class="flex flex-row">
+      <h2 class="mt-2 text-xl">
+				It's alive...
+			</h2>
+    </div>
+  </main>
 </Layout>
