--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,25 +1,74 @@
 ---
 interface Props {
-	title: string;
+  title: string;
 }
 
 const { title } = Astro.props;
+
+const pathname = new URL(Astro.request.url).pathname;
+const currentPath = pathname.slice(1);
+
+const nav = [
+  {
+    href: "",
+    text: "Home",
+  },
+  {
+    href: "tourdates",
+    text: "Tour Dates",
+  },
+];
 ---
 
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="description" content="Pipas website" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<title>{title}</title>
-	</head>
-	<body class="p-4">
-		<header>
-			<h1>Pipas</h1>
-		</header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Pipas website"
+    />
+    <meta
+      name="viewport"
+      content="width=device-width"
+    />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/favicon.svg"
+    />
+    <title>{title}</title>
+  </head>
+  <body class="p-2 sm:p-4 h-auto">
+    <header class="flex flex-col sm:flex-row sm:items-center">
+      <h1 class="text-4xl font-bold tracking-tight">Pipas</h1>
+      <nav class="sm:text-right w-full p-0">
+        {
+          nav.map((link) => (
+            <a
+              href={"/" + link.href}
+              class="text-md"
+              class:list={[
+                {
+                  "text-green-700": currentPath === link.href,
+                  "hover:text-emerald-900": currentPath !== link.href,
+                },
+              ]}
+            >
+              {link.text}
+            </a>
+          ))
+        }
+      </nav>
+    </header>
 
-		<slot />
-	</body>
+    <slot />
+  </body>
 </html>
+
+<style is:global>
+  body {
+    background: url(https://res.cloudinary.com/pipas/image/upload/v1606135066/background-mountains_dretlx.gif)
+      0 0 repeat;
+  }
+</style>
