--- a/src/pages/tourdates.astro
+++ b/src/pages/tourdates.astro
@@ -1,7 +1,7 @@
 ---
 import { db, Tourdate, asc, desc } from "astro:db";
 import Layout from "../layouts/Layout.astro";
-
+import dateFormat from "../utils/dateFormat";
 const tourdates = await db.select().from(Tourdate).orderBy(desc(Tourdate.date));
 console.log(tourdates);
 ---
@@ -34,7 +34,7 @@ console.log(tourdates);
             tourdates.map(({ date, venue, city, country, other }) => (
               <tr class="hover:bg-emerald-100 border-b border-emerald-100">
                 <td class="pl-2 pb-2 pt-2 align-top leading-tight text-emerald-900">
-                  {date.toString().slice(0, 10)}
+                  {dateFormat(date)}
                 </td>
                 <td class="pl-3 pt-2 pb-2 align-top max-w-xs leading-tight">
                   {venue}, {city}
