--- a/src/pages/tourdates.astro
+++ b/src/pages/tourdates.astro
@@ -1,12 +1,23 @@
 ---
-import { db, Tourdate, asc, desc } from "astro:db";
+import { db, Tourdate, desc } from "astro:db";
 import Layout from "../layouts/Layout.astro";
 import dateFormat from "../utils/dateFormat";
 const tourdates = await db.select().from(Tourdate).orderBy(desc(Tourdate.date));
-console.log(tourdates);
+const countryCodes: Record<string, string> = {
+  "GB-ENG": "England",
+  "GB-SCT": "Scotland",
+  ES: "Spain",
+  SE: "Sweden",
+  EE: "Estonia",
+  GR: "Greece",
+  DE: "Germany",
+  US: "U.S.",
+  IT: "Italy",
+  AU: "Australia",
+};
 ---
 
-<Layout title="Toudates | Pipas">
+<Layout title="Tourdates | Pipas">
   <div>
     <h2 class="mt-2 text-xl border-b pb-2 mb-3 border-emerald-300">
       Tour Dates
@@ -43,7 +54,7 @@ console.log(tourdates);
                   </div>
                 </td>
                 <td class="pl-2 pb-2 pt-2 align-top leading-tight">
-                  {country}
+                  {countryCodes[country]}
                 </td>
               </tr>
             ))
