--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,20 +4,23 @@ interface Props {
 }
 
 const { title } = Astro.props;
-
-const pathname = new URL(Astro.request.url).pathname;
-const currentPath = pathname.slice(1);
+const { url } = Astro.request;
 
 const nav = [
   {
-    href: "",
+    href: "/",
     text: "Home",
   },
   {
-    href: "tourdates",
+    href: "/tourdates",
     text: "Tour Dates",
   },
 ];
+const pathname = new URL(url).pathname;
+const pathCheck =
+  pathname.length > 1 && pathname.endsWith("/")
+    ? pathname.slice(0, -1)
+    : pathname;
 ---
 
 <!doctype html>
@@ -46,12 +49,12 @@ const nav = [
         {
           nav.map((link) => (
             <a
-              href={"/" + link.href}
+              href={link.href}
               class="text-md"
               class:list={[
                 {
-                  "text-green-700": currentPath === link.href,
-                  "hover:text-emerald-900": currentPath !== link.href,
+                  "text-green-700": pathCheck === link.href,
+                  "hover:text-emerald-900": pathCheck === link.href,
                 },
               ]}
             >
