--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,7 +29,7 @@ const pathCheck =
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Pipas website"
+      content="Website for Pipas, a band from London and New York City."
     />
     <meta
       name="viewport"
