--- a/src/pages/tourdates.astro
+++ b/src/pages/tourdates.astro
@@ -18,7 +18,7 @@ const countryCodes: Record<string, string> = {
 ---
 
 <Layout title="Tourdates | Pipas">
-  <div>
+  <main>
     <h2 class="mt-2 text-xl border-b pb-2 mb-3 border-emerald-300">
       Tour Dates
     </h2>
@@ -62,5 +62,5 @@ const countryCodes: Record<string, string> = {
         </tbody>
       </table>
     </div>
-  </div>
+  </main>
 </Layout>
