--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -42,10 +42,10 @@ const pathCheck =
     />
     <title>{title}</title>
   </head>
-  <body class="p-2 sm:p-4 h-auto">
+  <body class="h-auto p-2 sm:p-4">
     <header class="flex flex-col sm:flex-row sm:items-center">
       <h1 class="text-4xl font-bold tracking-tight">Pipas</h1>
-      <nav class="sm:text-right w-full p-0">
+      <nav class="w-full p-0 sm:text-right">
         {
           nav.map((link) => (
             <a
