--- a/src/pages/tourdates.astro
+++ b/src/pages/tourdates.astro
@@ -19,7 +19,7 @@ const hasUpcoming = tourdatesUpcoming && tourdatesUpcoming.length > 0;
 
 <Layout title="Tourdates | Pipas">
   <main>
-    <h2 class="mt-2 text-xl border-b pb-2 mb-3 border-emerald-300">
+    <h2 class="pb-2 mt-2 mb-3 text-xl border-b border-emerald-300">
       Tour Dates
     </h2>
 
