Minor text and layout updates

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -44,8 +44,8 @@ const pathCheck =
   </head>
   <body class="h-auto p-2 sm:p-4">
     <header class="flex flex-col sm:flex-row sm:items-center">
-      <h1 class="text-4xl font-bold tracking-tight">Pipas</h1>
-      <nav class="w-full p-0 sm:text-right">
+      <h1 class="text-4xl font-bold tracking-tight"><a href="/">Pipas</a></h1>
+      <nav class="ml-auto p-0 sm:text-right flex gap-4">
         {
           nav.map((link) => (
             <a
