--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,6 +15,10 @@ const nav = [
     href: "/tourdates",
     text: "Tour Dates",
   },
+  {
+    href: "/discography",
+    text: "Discography",
+  },
 ];
 const pathname = new URL(url).pathname;
 const pathCheck =
@@ -73,5 +77,8 @@ const pathCheck =
   body {
     background: url(https://res.cloudinary.com/pipas/image/upload/v1606135066/background-mountains_dretlx.gif)
       0 0 repeat;
+  }
+  ol {
+    @apply list-decimal list-inside my-3;
   }
 </style>
