--- a/src/components/Cover.astro
+++ b/src/components/Cover.astro
@@ -3,7 +3,7 @@ import { tv } from "tailwind-variants";
 import type { ImageMetadata } from "astro";
 import { Image } from "astro:assets";
 
-const { src, alt, size } = Astro.props;
+const { src, alt, size, loading } = Astro.props;
 const images = import.meta.glob<{ default: ImageMetadata }>(
   "../../assets/disc/*"
 );
@@ -28,5 +28,6 @@ const cover = tv({
     src={images[src]()}
     alt={alt}
     class={cover({ size: size })}
+    loading={loading}
   />
 </div>
