--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -81,4 +81,10 @@ const pathCheck =
   ol {
     @apply list-decimal list-inside my-3;
   }
+  ul {
+    @apply list-disc list-inside my-3;
+    li {
+      @apply leading-snug;
+    }
+  }
 </style>
