--- a/src/pages/discography.astro
+++ b/src/pages/discography.astro
@@ -1,5 +1,5 @@
 ---
-import { db, Release, desc, lt, gte } from "astro:db";
+import { db, Release, desc, lte, gt } from "astro:db";
 import type { Release as ReleaseType } from "../utils/release";
 import Layout from "../layouts/Layout.astro";
 import ReleasesTable from "../components/ReleasesTable.astro";
@@ -7,13 +7,13 @@ import ReleasesTable from "../components/ReleasesTable.astro";
 const releases = (await db
   .select()
   .from(Release)
-  .where(lt(Release.format, 4))
+  .where(lte(Release.format, 4))
   .orderBy(desc(Release.date))) as ReleaseType[];
 
 const compilations = (await db
   .select()
   .from(Release)
-  .where(gte(Release.format, 4))
+  .where(gt(Release.format, 4))
   .orderBy(desc(Release.date))) as ReleaseType[];
 ---
 
