--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -79,10 +79,10 @@ const pathCheck =
       0 0 repeat;
   }
   ol {
-    @apply list-decimal list-inside my-3;
+    @apply list-decimal list-inside mt-2;
   }
   ul {
-    @apply list-disc list-inside my-3;
+    @apply list-disc list-inside mt-2;
     li {
       @apply leading-snug;
     }
