--- a/src/components/ReleasesTable.astro
+++ b/src/components/ReleasesTable.astro
@@ -18,36 +18,44 @@ const { releases, size } = Astro.props;
     releases.map(
       ({ date, title, cat, format, label, tracklisting, notes }, index) => (
         <div>
-          <p class="text-xs uppercase">
+          <p class="text-xs uppercase mb-1">
             {dateFormat(date, {
               day: undefined,
               month: "short",
               timeZone: "UTC",
             })}
           </p>
-          <span class="flex items-baseline gap-1">
-            <h4 class="font-bold text-lg mb-2">
-              <Fragment set:html={title} />
-            </h4>
-            {formats[format]}
-            <span class="opacity-60 uppercase text-sm">({cat})</span>
+
+          <span class="flex flex-wrap items-baseline leading-tight gap-1">
+            <h3 class="mb-2 text-lg font-light leading-tight">
+              <span class="font-bold ">
+                <Fragment set:html={title} />
+              </span>
+              <span>{formats[format]}</span>
+            </h3>
           </span>
+
           <Cover
             src={"../../assets/disc/" + cat + ".webp"}
             alt="Cover art"
             size={size}
             loading={index <= 2 ? "eager" : "lazy"}
           />
-          {notes && (
-            <p>
-              <Fragment set:html={marked.parse(notes)} />
-            </p>
-          )}
-          <p>
-            <Fragment set:html={label} />
+
+          <p class="mt-2 leading-tight text-sm">
+            <Fragment set:html={label} />{" "}
+            <span class="text-sm uppercase opacity-60">({cat})</span>
           </p>
 
-          {tracklisting && <Fragment set:html={marked.parse(tracklisting)} />}
+          {notes && (
+            <div class="mt-2 *:leading-tight *:text-base">
+              <Fragment set:html={marked.parse(notes)} />
+            </div>
+          )}
+
+          <div>
+            {tracklisting && <Fragment set:html={marked.parse(tracklisting)} />}
+          </div>
         </div>
       )
     )
