--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,12 +12,12 @@ const nav = [
     text: "Home",
   },
   {
-    href: "/tourdates",
-    text: "Tour Dates",
-  },
-  {
     href: "/discography",
     text: "Discography",
+  },
+  {
+    href: "/tourdates",
+    text: "Tour Dates",
   },
 ];
 const pathname = new URL(url).pathname;
@@ -46,10 +46,10 @@ const pathCheck =
     />
     <title>{title}</title>
   </head>
-  <body class="h-auto p-2 sm:p-4">
+  <body class="h-auto p-4 sm:p-8">
     <header class="flex flex-col sm:flex-row sm:items-center">
       <h1 class="text-4xl font-bold tracking-tight"><a href="/">Pipas</a></h1>
-      <nav class="ms-auto p-0 sm:text-end flex gap-4">
+      <nav class="flex p-0 ms-auto sm:text-end gap-4">
         {
           nav.map((link) => (
             <a
@@ -82,9 +82,9 @@ const pathCheck =
     @apply list-decimal list-inside mt-2;
   }
   ul {
-    @apply list-disc list-inside mt-2;
+    @apply list-disc list-outside mt-2 ms-0 ps-0;
     li {
-      @apply leading-snug;
+      @apply leading-snug ms-4 ps-0;
     }
   }
 </style>
