--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -87,4 +87,18 @@ const pathCheck =
       @apply leading-snug ms-4 ps-0;
     }
   }
+  .disc {
+    width: 100dvw;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 3dvw;
+    img {
+      width: 100%;
+      height: auto;
+    }
+    > article {
+      max-width: 300px;
+      min-width: 300px;
+    }
+  }
 </style>
