--- a/src/components/ReleasesTable.astro
+++ b/src/components/ReleasesTable.astro
@@ -13,11 +13,11 @@ interface Props {
 const { releases, size } = Astro.props;
 ---
 
-<section class="space-y-8 max-w-[48ch] text-pretty">
+<section class="text-pretty disc">
   {
     releases.map(
       ({ date, title, cat, format, label, tracklisting, notes }, index) => (
-        <div>
+        <article>
           <p class="text-xs uppercase mb-1">
             {dateFormat(date, {
               day: undefined,
@@ -27,7 +27,7 @@ const { releases, size } = Astro.props;
           </p>
 
           <span class="flex flex-wrap items-baseline leading-tight gap-1">
-            <h3 class="mb-2 text-lg font-light leading-tight">
+            <h3 class="mb-2 text-lg font-light leading-tight text-balance">
               <span class="font-bold ">
                 <Fragment set:html={title} />
               </span>
@@ -56,7 +56,7 @@ const { releases, size } = Astro.props;
           <div>
             {tracklisting && <Fragment set:html={marked.parse(tracklisting)} />}
           </div>
-        </div>
+        </article>
       )
     )
   }
