--- a/src/pages/discography.astro
+++ b/src/pages/discography.astro
@@ -27,7 +27,7 @@ const compilations = (await db
       <section class="py-4">
         <h2 class="mb-6 text-xl font-bold">Albums & EPs</h2>
 
-        <ReleasesTable releases={releases} style="grid" />
+        <ReleasesTable releases={releases} style="grid" size="md" />
       </section>
 
       <section class="py-4">
