--- a/src/components/Cover.astro
+++ b/src/components/Cover.astro
@@ -13,8 +13,8 @@ const cover = tv({
   variants: {
     size: {
       sm: "min-w-[100px] max-w-[100px]",
-      md: "sm:max-w-[250px]",
-      lg: "max-w-[350px]",
+      md: "max-w-[250px] md:max-w-[350px]",
+      lg: "max-w-[450px]",
     },
   },
   defaultVariants: {
